# song_practice

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  project_description.md
.github/: copilot-instructions.md
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: SettingsManager.cpp  SettingsManager.h  Utils.cpp  Utils.h
src/ui/: MainWindow.cpp  MainWindow.h  WaveformRenderer.cpp  WaveformRenderer.h
